admin-books ready

--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -10,8 +10,10 @@
            <a class="nav-link" href="/">Home
              <span class="sr-only">(current)</span>
           </a>
-          
-         </li>
+         <li>
+            <a class="nav-link" href="/admin/books">Inventory</a>
+         </li> 
+         
          <li class="nav-item">
            <a class="nav-link" href="#">Shop</a>
          </li>
