--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -40,13 +40,13 @@
         <!-- /.row -->
 
       </main>
-      <div class="container">
+      <!-- <div class="container">
          <div class="row">
             <div class="col text-center">
                   <a href="/admin" class="btn btn-primary btn-sm">Admin Sign In</a>
             </div>
          </div>
-      </div>
+      </div> -->
 
       <!-- /.container -->
 
