--- a/src/views/static/partials/head.ejs
+++ b/src/views/static/partials/head.ejs
@@ -1,7 +1,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<title>Book Table</title>
+<title>Book Table: Shop for insightful books!</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
 
 <link rel="stylesheet" href="/css/application.css">
