--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -40,13 +40,24 @@
         <!-- /.row -->
 
       </main>
-      <!-- <div class="container">
+      <% if(!currentUser) { %> 
+      <div class="container">
          <div class="row">
             <div class="col text-center">
-                  <a href="/admin" class="btn btn-primary btn-sm">Admin Sign In</a>
+                  <a href="/users/sign_in" class="btn btn-primary btn-sm">Admin Sign In</a>
             </div>
          </div>
-      </div> -->
+      </div>
+      <% } %>
+      <% if(currentUser && currentUser.isAdmin()) { %> 
+      <div class="container">
+         <div class="row">
+            <div class="col text-center">
+                  <a href="/users/sign_out" class="btn btn-primary btn-sm">Admin Log Out</a>
+            </div>
+         </div>
+      </div>
+      <% } %>
 
       <!-- /.container -->
 
