--- a/src/views/static/index.ejs
+++ b/src/views/static/index.ejs
@@ -15,7 +15,7 @@
         <header class="jumbotron my-4" style="background-color:khaki">
           <h1 class="display-3">Welcome to the Book Table</h1>
           <p class="lead">A web based way to buy books and curriculum. Come get equipped!</p>
-          <a href="/shop" class="btn btn-primary btn-lg">Shop</a>
+          <a href="/store" class="btn btn-primary btn-lg">Shop</a>
         </header>
 
         <!-- Page Features -->
