--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -17,7 +17,7 @@
          </li> 
         <% } %>
          <li class="nav-item">
-           <a class="nav-link" href="#">Shop</a>
+           <a class="nav-link" href="/store">Shop</a>
          </li>
          <li class="nav-item">
             <a class="nav-link" href="#">Cart</a>
