--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-info fixed-top">
    <div class="container">
-     <a class="navbar-brand" href="#">Book Table</a>
+     <a class="navbar-brand" href="/">Book Table</a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
      </button>
@@ -17,7 +17,7 @@
          </li> 
         <% } %>
          <li class="nav-item">
-           <a class="nav-link" href="#">Shop</a>
+           <a class="nav-link" href="/store">Shop</a>
          </li>
          <li class="nav-item">
             <a class="nav-link" href="#">Cart</a>
